hphp/test/slow/hhbbc/missing-classes1.php.expectf
Fatal error: unknown class Missing in %s/missing-classes1.php on line 3
